[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/interface/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/theme/menu.tres" type="Theme" id=2]
[ext_resource path="res://assets/audio/menu/SnowfallButterflies.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/menu/layers/parallax-forest-back-trees.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/layers/parallax-forest-middle-trees.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/layers/parallax-forest-lights.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/layers/parallax-forest-front-trees.png" type="Texture" id=7]
[ext_resource path="res://assets/audio/menu/UI_Quirky7.ogg" type="AudioStream" id=8]
[ext_resource path="res://scenes/interface/ParallaxBackground.gd" type="Script" id=9]
[ext_resource path="res://scenes/interface/Buttons.gd" type="Script" id=10]
[ext_resource path="res://scenes/transition/Transition.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/menu/layers/leaf.png" type="Texture" id=12]
[ext_resource path="res://assets/audio/menu/light-switch-82388.ogg" type="AudioStream" id=13]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 2500, 1500, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 60, 98, 0 )
angular_velocity = -21.82
angular_velocity_random = 0.11
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -96.97
linear_accel_random = 0.9
radial_accel = 63.63
radial_accel_random = 0.54
anim_speed_random = 0.11

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.036
anchor_top = 0.624
anchor_right = 0.176
anchor_bottom = 0.958
margin_left = 5.0
margin_top = 400.0
margin_right = 81.0
margin_bottom = 498.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
script = ExtResource( 10 )

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 76.0
margin_bottom = 30.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"
flat = true
align = 0

[node name="OptionButton" type="Button" parent="Buttons"]
margin_top = 34.0
margin_right = 76.0
margin_bottom = 64.0
text = "Options"
flat = true
align = 0

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 68.0
margin_right = 76.0
margin_bottom = 98.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"
flat = true
align = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="Buttons"]
scale = Vector2( 3.8, 3.8 )
transform = Transform2D( 3.8, 0, 0, 3.8, 0, 0 )
script = ExtResource( 9 )

[node name="Layer1" type="ParallaxLayer" parent="Buttons/ParallaxBackground"]
motion_mirroring = Vector2( 272, 0 )

[node name="Sprite" type="Sprite" parent="Buttons/ParallaxBackground/Layer1"]
texture = ExtResource( 4 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="Buttons/ParallaxBackground"]
motion_mirroring = Vector2( 272, 0 )

[node name="Sprite" type="Sprite" parent="Buttons/ParallaxBackground/Layer2"]
texture = ExtResource( 6 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="Buttons/ParallaxBackground"]
motion_mirroring = Vector2( 272, 0 )

[node name="Sprite" type="Sprite" parent="Buttons/ParallaxBackground/Layer3"]
texture = ExtResource( 5 )
centered = false

[node name="Particles2D" type="Particles2D" parent="Buttons/ParallaxBackground"]
position = Vector2( 110, -2 )
scale = Vector2( 0.02, 0.02 )
lifetime = 20.0
speed_scale = 1.1
randomness = 0.29
process_material = SubResource( 3 )
texture = ExtResource( 12 )

[node name="Layer4" type="ParallaxLayer" parent="Buttons/ParallaxBackground"]
motion_mirroring = Vector2( 272, 0 )

[node name="Sprite" type="Sprite" parent="Buttons/ParallaxBackground/Layer4"]
texture = ExtResource( 7 )
centered = false

[node name="Particles2D2" type="Particles2D" parent="Buttons/ParallaxBackground"]
position = Vector2( 122.632, 3.1579 )
scale = Vector2( 0.05, 0.05 )
amount = 4
lifetime = 20.0
speed_scale = 2.0
explosiveness = 0.49
randomness = 0.16
process_material = SubResource( 3 )
texture = ExtResource( 12 )

[node name="ButtonSelected" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 8 )

[node name="ButtonHover" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 13 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Transition" parent="." instance=ExtResource( 11 )]

[connection signal="scene_change_requested" from="." to="Transition" method="transition_to"]
[connection signal="button_down" from="Buttons/StartButton" to="Buttons" method="_on_StartButton_button_down"]
[connection signal="focus_entered" from="Buttons/StartButton" to="Buttons" method="_on_Button_hover"]
[connection signal="mouse_entered" from="Buttons/StartButton" to="Buttons" method="_on_Button_hover"]
[connection signal="button_down" from="Buttons/OptionButton" to="Buttons" method="_on_OptionButton_button_down"]
[connection signal="focus_entered" from="Buttons/OptionButton" to="Buttons" method="_on_Button_hover"]
[connection signal="mouse_entered" from="Buttons/OptionButton" to="Buttons" method="_on_Button_hover"]
[connection signal="button_down" from="Buttons/QuitButton" to="Buttons" method="_on_QuitButton_button_down"]
[connection signal="focus_entered" from="Buttons/QuitButton" to="Buttons" method="_on_Button_hover"]
[connection signal="mouse_entered" from="Buttons/QuitButton" to="Buttons" method="_on_Button_hover"]
